iris/docs/v1.7.3/_sources/iris/iris/analysis.txt
.. _iris.analysis:

=============
iris.analysis
=============


.. sidebar:: Modules in this package


   .. toctree::
      :maxdepth: 2
      :titlesonly:

      analysis/calculus
      analysis/cartography
      analysis/geometry
      analysis/interpolate
      analysis/maths
      analysis/stats
      analysis/trajectory




    

.. currentmodule:: iris

.. automodule:: iris.analysis

In this module:

 * :py:obj:`COUNT`
 * :py:obj:`GMEAN`
 * :py:obj:`HMEAN`
 * :py:obj:`MAX`
 * :py:obj:`MEAN`
 * :py:obj:`MEDIAN`
 * :py:obj:`MIN`
 * :py:obj:`PEAK`
 * :py:obj:`PERCENTILE`
 * :py:obj:`PROPORTION`
 * :py:obj:`RMS`
 * :py:obj:`STD_DEV`
 * :py:obj:`SUM`
 * :py:obj:`VARIANCE`
 * :py:obj:`coord_comparison`
 * :py:obj:`Aggregator`
 * :py:obj:`WeightedAggregator`
 * :py:obj:`clear_phenomenon_identity`
 * :py:obj:`Linear`
 * :py:obj:`AreaWeighted`




.. autodata:: iris.analysis.COUNT


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.GMEAN


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.HMEAN


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.MAX


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.MEAN


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.MEDIAN


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.MIN


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.PEAK


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.PERCENTILE


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.PROPORTION


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.RMS


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.STD_DEV


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.SUM


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->



.. autodata:: iris.analysis.VARIANCE


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.analysis.coord_comparison


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


The :class:`Aggregator` class provides common aggregation functionality.

..

    .. autoclass:: iris.analysis.Aggregator
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


Convenience class that supports common weighted aggregation functionality.

..

    .. autoclass:: iris.analysis.WeightedAggregator
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


.. autofunction:: iris.analysis.clear_phenomenon_identity


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


This class describes the linear interpolation scheme for interpolating over
one or more orthogonal coordinates, typically for use with
:meth:`iris.cube.Cube.interpolate()` or :meth:`iris.cube.Cube.regrid()`.

..

    .. autoclass:: iris.analysis.Linear
        :members:
        :undoc-members:
        :inherited-members:


.. raw:: html

    <p class="hr_p"><a href="#">&uarr;&#32&#32 top &#32&#32&uarr;</a></p>
    <!--
-----------

.. raw:: html

    -->


This class describes the area-weighted regridding scheme for regridding
over one or more orthogonal coordinates, typically for use with
:meth:`iris.cube.Cube.regrid()`.

..

    .. autoclass:: iris.analysis.AreaWeighted
        :members:
        :undoc-members:
        :inherited-members:

